@@ -43,4 +43,5 @@ void addNTriangulation(CppUnit::TextUi::TestRunner& runner);
 void addElementaryMoves(CppUnit::TextUi::TestRunner& runner);
 void addConnectedSumDecomp(CppUnit::TextUi::TestRunner& runner);
 void addNIsomorphism(CppUnit::TextUi::TestRunner& runner);
+void addHomologicalData(CppUnit::TextUi::TestRunner& runner);
 
